methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: identifier expected but 'false' found.
    if (estFaceMur():Boolean == false) {
                                ^SlugTracking:12: error: ')' expected but '}' found.
} 
^