methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if (estFaceMur():Boolean == false) {
      avance()
      if (getCouleurSol() == Color.green) {
        recule()
        return true
      }
      recule()
      return false
    }
}